--- a/client/templates/stylesheets/style.scss
+++ b/client/templates/stylesheets/style.scss
@@ -20,6 +20,13 @@ body{
 @mixin widthOrder {
     width: $option;
 }
+@mixin overflow {
+    height: auto;
+    overflow: hidden;
+}
+@mixin width{
+    width : $width;
+}
 .container {
     .free_view_circular{
         .free_circular{
@@ -27,7 +34,128 @@ body{
             height: 203px;
             border-radius: 30%;
             background-color:#4A90E2;
-            margin-top: -110px ;
+            margin-top: -110px;
+            position: relative;
+            div{
+                @include width;
+                text-align: center;
+                position: absolute;
+                bottom: 50px;
+                left: 0;
+                color: white;
+                font-size: 18px;
+            }
         }
+    }
+}
+.my-swipe{
+    transform: translateY(-40px);
+    .van-swipe-item {
+        color: #fff;
+        font-size: 20px;
+        // line-height: 89px;
+        text-align: center;
+        // background-color: #39a9ed;
+        overflow: hidden;
+        img{
+            width: 96%;
+            height: auto;
+        }
+      }
+}
+.machine{
+    transform: translateY(-30px);
+    padding: 10px;
+    box-sizing: border-box;
+    ul{
+        li{
+            @include overflow;
+            @include width;
+            background-color: white;
+            position: relative;
+            padding: 10px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+            img{
+                width: 75px;
+                height: 75px;
+                float: left;
+                margin-right: 10px;
+            }
+            div{
+                @include overflow;
+                font-size: 21px;
+                span{
+                    display: block;
+                    margin-top: 10px;
+                }
+                span:nth-of-type(2){
+                    font-size: 13px;
+                    color: #333333;
+                }
+            }
+            img:nth-of-type(2){
+                position: absolute;
+                right: 0;
+                bottom: 30px;
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
+}
+.center{
+    ul>li{
+        line-height: 20px;
+        div{
+            float: right;
+            display: block;
+        }
+        div>span{
+            font-size: 13px;
+            color: #999999;
+            display: inline-block;
+            margin: 0;
+        }
+        div>.van-icon-arrow{
+            float: right !important;
+            margin-top: 4.5px;
+        }
+        textarea{
+            display: block;
+            @include width;
+            padding: 10px;
+            box-sizing: border-box;
+            background:#FAFAFA;
+            box-shadow:0px 0px 10px 0px rgba(12,4,7,0.1);
+            border-radius:8px;
+            height: 95px;
+            margin-top: 10px;
+        }
+    }
+}
+.van-button{
+    width: 90%;
+    margin: 0 auto;
+    display: block;
+}
+.van-tabs{
+    transform: translateY(-30px);
+    .van-tabs__line{
+        background-color: #4A90E2;
+    }
+}
+.module{
+    @include width;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+    .router{
+        text-align: center;
+        color: white;
+        transform: translateY(200px);
     }
 }
