--- a/client/templates/views/content.pug
+++ b/client/templates/views/content.pug
@@ -10,35 +10,53 @@ html(lang="en")
   head
     title 咖速修
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.8/lib/index.css")
-  body
+  body(style="height: 130%;")
     .module 
       .router 努力加载中...
     .container#app
-      .free_view_circular
-          .free_circular
-            div 填写需求
+      //- .free_view_circular
+      //-     .free_circular
+      van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
+        van-swipe-item
+            img(:src="image")
       .machine.center
         ul
           li(@click="contentMsg = !contentMsg")
-            span 需求内容
-            div
-              span 请选择需求内容
+            span 设备（必填）
+            .machineName
+              span {{ machine.machineName }}
               van-icon(name="arrow" size="16")
           li
-            span 故障描述
-            textarea(placeholder="请务必描述故障问题")
-      van-popup(v-model="contentMsg" round position="bottom" :style="{ height: '40%' }")
-        van-radio-group(v-model="radio")
-          van-cell-group(v-for="(item, index = index + 1) in machineList")
-              van-cell(:title="item.demandChargeName" clickable @click="radiofn(index)")
-                template(#right-icon)
-                  //- span(style="text-align: center;margin-right: 20px;") {{item.content}}
-                  van-radio(name=index)
-        van-checkbox-group(v-model="result")
-          van-cell-group
-            each item in [1,2]
-              van-cell(clickable title="复选框" @click="checkboxfn("+ item +")")
-                template(#right-icon)
-                  van-checkbox(name=item ref="checkboxGroup" shape="square")
-      van-button(round type="info" size="normal") 提交
+            span 门店名（必填）：
+            van-field(v-model="shopName")
+          li
+            span 联系人名称（必填）：
+            van-field(v-model="contactName")
+          li
+            span 联系人电话（必填）：
+            van-field(v-model="contactPhone" type="tel")
+          li
+            span 故障描述（必填）：
+            textarea(placeholder="请填写描述故障问题" v-model="faultContent")
+          li
+            span 机器铭牌图
+            .file
+              van-uploader(v-model="fileList" multiple :after-read="updataFile('machineBrandPic')" :before-delete="deleteFn('fileList')")
+          li
+            span 机器整体图
+            .file
+              van-uploader(v-model="fileLists" multiple :after-read="updataFile('machineOverallPic')" :before-delete="deleteFn('fileLists')")
+          li
+            span 问题部位图
+            .file
+              van-uploader(v-model="fileListss" multiple :after-read="updataFile('faultPartPic')" :before-delete="deleteFn('fileListss')")
+      //- van-action-sheet(v-model="contentMsg" :actions="actions" @select="onSelect" cancel-text="取消" close-on-click-action)
+      van-popup(v-model="contentMsg" position="bottom" :style="{ height: '40%' }")
+        van-tree-select(:items="items" :active-id.sync="activeId" :main-active-index.sync="activeIndex" @click-item="onSelect")
+
+      van-button(round type="info" size="normal" @click="submit" :loading="handling ? true : false" ) 提交
+      
+      van-tabbar(v-model="active" @change="ourHref")
+          van-tabbar-item(icon="comment-o") 填写信息
+          van-tabbar-item(icon="todo-list-o") 我的订单
       
