--- a/client/templates/stylesheets/style.css
+++ b/client/templates/stylesheets/style.css
@@ -3,6 +3,7 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: #f0f0ee;
 }
 
 body {
@@ -11,11 +12,18 @@ body {
   overflow-x: hidden;
   margin: 0 auto;
   font-size: 14px;
-  background-color: #f0f0ee;
+  background-color: #fff;
+  height: 100%;
+  position: relative;
 }
 
 body input {
   font-size: 14px;
+}
+
+.container {
+  position: relative;
+  height: 100%;
 }
 
 .container .free_view_circular .free_circular {
@@ -37,10 +45,6 @@ body input {
   font-size: 18px;
 }
 
-.my-swipe {
-  transform: translateY(-40px);
-}
-
 .my-swipe .van-swipe-item {
   color: #fff;
   font-size: 20px;
@@ -54,7 +58,6 @@ body input {
 }
 
 .machine {
-  transform: translateY(-30px);
   padding: 10px;
   box-sizing: border-box;
 }
@@ -78,8 +81,6 @@ body input {
 }
 
 .machine ul li div {
-  height: auto;
-  overflow: hidden;
   font-size: 21px;
 }
 
@@ -101,28 +102,50 @@ body input {
   height: 30px;
 }
 
+.center ul > li:nth-of-type(1) {
+  border-bottom: 1px solid #ccc;
+}
+
 .center ul > li {
   line-height: 20px;
 }
 
-.center ul > li div {
+.center ul > li .van-field {
+  border-bottom: 1px solid #ccc;
+}
+
+.center ul > li .file {
+  display: block;
+  margin-top: 10px;
+}
+
+.center ul > li .file .van-uploader, .center ul > li .file .van-uploader__upload, .center ul > li .file .van-uploader__wrapper, .center ul > li .file .van-uploader__preview, .center ul > li .file .van-uploader__preview-image {
+  height: 80px !important;
+}
+
+.center ul > li .file .van-loading__spinner {
+  margin-top: 0 !important;
+}
+
+.center ul > li .machineName {
   float: right;
   display: block;
 }
 
-.center ul > li div > span {
+.center ul > li .machineName > span {
   font-size: 13px;
   color: #999999;
   display: inline-block;
   margin: 0;
 }
 
-.center ul > li div > .van-icon-arrow {
+.center ul > li .machineName > .van-icon-arrow {
   float: right !important;
   margin-top: 4.5px;
 }
 
 .center ul > li textarea {
+  resize: none;
   display: block;
   width: 100%;
   padding: 10px;
@@ -136,16 +159,20 @@ body input {
 
 .van-button {
   width: 90%;
-  margin: 0 auto;
-  display: block;
-}
-
-.van-tabs {
-  transform: translateY(-30px);
+  margin: 0 5% 70px;
 }
 
 .van-tabs .van-tabs__line {
   background-color: #4A90E2;
+}
+
+.van-button--info {
+  background-color: #e00112;
+  border: 1px solid #e00112;
+}
+
+.van-tabbar-item--active {
+  color: #e00112;
 }
 
 .module {
