--- a/client/templates/stylesheets/style.scss
+++ b/client/templates/stylesheets/style.scss
@@ -1,10 +1,12 @@
 $width: 100%;
 $option: 100px;
+$color: #e00112;
 html{
     margin: 0;
     padding: 0;
     width: $width;
     height: $width;
+    background-color: #f0f0ee;
 }
 body{
     max-width: 640px;
@@ -12,7 +14,9 @@ body{
     overflow-x: hidden;
     margin: 0 auto;
     font-size: 14px;
-    background-color: #f0f0ee;
+    background-color: #fff;
+    height: $width;
+    position: relative;
     input{
         font-size: 14px;
     }
@@ -28,6 +32,8 @@ body{
     width : $width;
 }
 .container {
+    position: relative;
+    height: $width;
     .free_view_circular{
         .free_circular{
             width: 100%;
@@ -49,7 +55,7 @@ body{
     }
 }
 .my-swipe{
-    transform: translateY(-40px);
+    // transform: translateY(-40px);
     .van-swipe-item {
         color: #fff;
         font-size: 20px;
@@ -64,7 +70,7 @@ body{
       }
 }
 .machine{
-    transform: translateY(-30px);
+    // transform: translateY(-30px);
     padding: 10px;
     box-sizing: border-box;
     ul{
@@ -83,7 +89,6 @@ body{
                 margin-right: 10px;
             }
             div{
-                @include overflow;
                 font-size: 21px;
                 span{
                     display: block;
@@ -105,23 +110,40 @@ body{
     }
 }
 .center{
+    ul>li:nth-of-type(1){
+        border-bottom: 1px solid #ccc;
+    }
     ul>li{
+        .van-field{
+            border-bottom: 1px solid #ccc;
+        }
+        .file{
+            display: block;
+            margin-top: 10px;
+            .van-uploader,.van-uploader__upload,.van-uploader__wrapper,.van-uploader__preview,.van-uploader__preview-image{
+                height: 80px !important;
+            }
+            .van-loading__spinner{
+                margin-top: 0 !important;
+            }
+        }
         line-height: 20px;
-        div{
+        .machineName{
             float: right;
             display: block;
         }
-        div>span{
+        .machineName>span{
             font-size: 13px;
             color: #999999;
             display: inline-block;
             margin: 0;
         }
-        div>.van-icon-arrow{
+        .machineName>.van-icon-arrow{
             float: right !important;
             margin-top: 4.5px;
         }
         textarea{
+            resize:none;
             display: block;
             @include width;
             padding: 10px;
@@ -136,15 +158,22 @@ body{
 }
 .van-button{
     width: 90%;
-    margin: 0 auto;
-    display: block;
+    margin: 0 5% 70px;
 }
 .van-tabs{
-    transform: translateY(-30px);
+    // transform: translateY(-30px);
     .van-tabs__line{
         background-color: #4A90E2;
     }
 }
+.van-button--info{
+    background-color: $color;
+    border: 1px solid $color;
+}
+.van-tabbar-item--active{   
+    color: $color;
+}
+
 .module{
     @include width;
     height: 100%;
