--- a/client/templates/views/index.pug
+++ b/client/templates/views/index.pug
@@ -14,18 +14,15 @@ html(lang="en")
     .module
       .router 努力加载中...
     .container
-        .free_view_circular
-            .free_circular
-    #app
-      van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
-          van-swipe-item
-              img(:src="image")
-          van-swipe-item
-              img(:src="image")
-      van-action-sheet(:actions="actions" @select="onSelect" v-model="show")
-      van-form(@submit="onSubmit")
-        van-field(v-model="username" name="user" label="用户名" placeholder="用户名" :rules="[{ required: true, message: '请填写用户名' }]")
-        van-field(v-model="password" type="password" name="pass" label="密码" placeholder="密码" :rules="[{ required: true, message: '请填写密码' }]")
-        div(style="margin: 16px;")
-          van-button(round block type="info" native-type="submit") 提交
+      #app
+        van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false )
+            van-swipe-item
+                img(:src="image")
+        van-form(@submit="onSubmit")
+          van-field(v-model="username" name="user" label="用户名" placeholder="用户名" :rules="[{ required: true, message: '请填写用户名' }]")
+          van-field(v-model="password" type="password" name="pass" label="密码" placeholder="密码" :rules="[{ required: true, message: '请填写密码' }]")
+          div(style="margin: 100px 0;")
+            van-button(round block type="info" native-type="submit") 提交
+            //- .free_view_circular
+            //- .free_circular
     
